--- a/src/assets/styles/base/font.scss
+++ b/src/assets/styles/base/font.scss
@@ -1,7 +1,14 @@
 @font-face {
   font-family: Poppins;
   src: url("@/assets/fonts/Poppins-Bold.woff") format("woff");
-  font-weight: bold;
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: Poppins;
+  src: url("@/assets/fonts/Poppins-Bold.woff") format("woff");
+  font-weight: 600;
   font-style: normal;
 }
 
@@ -16,5 +23,12 @@
   font-family: Poppins;
   src: url("@/assets/fonts/Poppins-Regular.woff") format("woff");
   font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: Lato;
+  src: url("@/assets/fonts/Lato-Bold.woff") format("woff");
+  font-weight: bold;
   font-style: normal;
 }
